# dde-file-manager

./: CMakeLists.txt  FileSortWoreke重构.md  FileSortWorker现状.md  FileSortWorker重构实施计划.md  TODO.txt  dfmplugin-workspace现状分析.md  plan_rootinfo.md  refactor_rootinfo.md  refactor_rootinfo2.md  rootinfo.md  test_proj_plan.md
debian/: control  dde-file-manager-services-plugins.install  dde-file-manager.install
include/dde-desktop-widgets/: dde-desktop-widgets-global.h
include/dde-desktop-widgets/interfaces/: widgetplugin.h  widgetplugincontext.h
include/dfm-base/: dfm_global_defines.h
include/dfm-base/interfaces/: abstractgroupstrategy.h
src/apps/dde-file-manager/: commandparser.cpp  dragmonitor.cpp  main.cpp
src/apps/dde-file-manager-daemon/dbusservice/: dde-file-manager.service
src/dfm-base/base/application/: application.cpp
src/dfm-base/utils/: fileutils.cpp  fileutils.h  windowutils.cpp
src/dfm-base/widgets/dfmwindow/: filemanagerwindow.cpp  filemanagerwindowsmanager.cpp
src/dfm-base/widgets/dfmwindow/private/: filemanagerwindow_p.h
src/dfm-framework/lifecycle/: lifecycle.cpp
src/dfm-framework/lifecycle/private/: pluginmanager_p.cpp
src/libs/dde-desktop-widgets/frame/: widgetmanager.cpp  widgetmanager.h  widgetpluginspec.cpp  widgetpluginspec.h
src/libs/dde-desktop-widgets/interfaces/: widgetplugin.cpp  widgetplugincontext.cpp
src/libs/dde-desktop-widgets/interfaces/private/: widgetplugincontext_p.h
src/plugins/common/dfmplugin-dirshare/utils/: usersharehelper.cpp  usersharehelper.h
src/plugins/common/dfmplugin-tag/: tag.cpp
src/plugins/common/dfmplugin-tag/menu/: tagmenuscene.cpp
src/plugins/common/dfmplugin-utils/global/: virtualglobalplugin.cpp
src/plugins/daemon/core/fsmonitor/: fseventcollector.cpp
src/plugins/desktop/ddplugin-canvas/view/operator/: fileoperatorproxy.cpp
src/plugins/filemanager/: CMakeLists.txt
src/plugins/filemanager/core/dfmplugin-titlebar/dialogs/: connecttoserverdialog.cpp
src/plugins/filemanager/dfmplugin-computer/: computer.cpp
src/plugins/filemanager/dfmplugin-computer/views/: computerview.cpp  computerview.h
src/plugins/filemanager/dfmplugin-core/: core.cpp
src/plugins/filemanager/dfmplugin-core/utils/: corehelper.cpp
src/plugins/filemanager/dfmplugin-filegroup/: CMakeLists.txt  dependencies.cmake  dfmplugin_filegroup_global.h  filegroup.cpp  filegroup.h  filegroup.json
src/plugins/filemanager/dfmplugin-filegroup/core/: fileitem.cpp  fileitem.h  fileitemdelegate.cpp  fileitemdelegate.h  filesystemmodel.cpp  filesystemmodel.h  groupinfo.h
src/plugins/filemanager/dfmplugin-filegroup/dialogs/: smartclassificationdialog.cpp  smartclassificationdialog.h
src/plugins/filemanager/dfmplugin-filegroup/menus/: filegroupmenuscene.cpp  filegroupmenuscene.h  filegroupmenuscene_p.h
src/plugins/filemanager/dfmplugin-filegroup/strategies/: groupingstrategy.cpp  groupingstrategy.h
src/plugins/filemanager/dfmplugin-filegroup/widgets/: filelistwidget.cpp  filelistwidget.h  toolbarwidget.cpp  toolbarwidget.h
src/plugins/filemanager/dfmplugin-myshares/: myshares.cpp
src/plugins/filemanager/dfmplugin-recent/: recent.cpp
src/plugins/filemanager/dfmplugin-search/: search.cpp
src/plugins/filemanager/dfmplugin-search/iterator/: searchdiriterator.cpp  searchdiriterator.h  searchdiriterator_p.h
src/plugins/filemanager/dfmplugin-search/utils/: checkboxwidthtextindex.cpp  checkboxwidthtextindex.h  searchhelper.cpp
src/plugins/filemanager/dfmplugin-sidebar/: sidebar.cpp
src/plugins/filemanager/dfmplugin-sidebar/treeviews/: sidebarwidget.cpp
src/plugins/filemanager/dfmplugin-smbbrowser/: smbbrowser.cpp
src/plugins/filemanager/dfmplugin-titlebar/: titlebar.cpp
src/plugins/filemanager/dfmplugin-titlebar/views/: sortbybutton.cpp
src/plugins/filemanager/dfmplugin-trash/: trash.cpp
src/plugins/filemanager/dfmplugin-vault/utils/: vaultvisiblemanager.cpp
src/plugins/filemanager/dfmplugin-workspace/: workspace.cpp
src/plugins/filemanager/dfmplugin-workspace/data/: configstructs.h  directorydata.cpp  directorydata.h  directoryrequest.cpp  directoryrequest.h  filechange.cpp  filechange.h  fileitem.cpp  fileitem.h
src/plugins/filemanager/dfmplugin-workspace/groups/: groupingengine.cpp  namegroupstrategy.cpp  namegroupstrategy.h  nogroupstrategy.cpp  nogroupstrategy.h  sizegroupstrategy.cpp  sizegroupstrategy.h  timegroupstrategy.cpp  timegroupstrategy.h  typegroupstrategy.cpp  typegroupstrategy.h
src/plugins/filemanager/dfmplugin-workspace/managers/: directorydatamanager.cpp  directorydatamanager.h  directorymanager.cpp  directorymanager.h  filewatchmanager.cpp  filewatchmanager.h
src/plugins/filemanager/dfmplugin-workspace/models/: fileitemdata.cpp  fileitemdata.h  fileviewmodel.cpp  fileviewmodel.h
src/plugins/filemanager/dfmplugin-workspace/utils/: filedatamanager.cpp  filedatamanager.h  fileoperatorhelper.cpp  fileoperatorhelper.h  filesortworker.cpp  filesortworker.h
src/plugins/filemanager/dfmplugin-workspace/views/: fileview.cpp
src/plugins/filemanager/dfmplugin-workspace/workers/: filewatchworker.cpp  filewatchworker.h  traversalworker.cpp  traversalworker.h
src/services/diskencrypt/: deepin-filemanager-diskencrypt.service
src/tools/: CMakeLists.txt
src/tools/redbox/: CMakeLists.txt
src/tools/redbox/shells/: test-desktop.sh  test-dfm.sh
src/tools/redbox/shells/startup/: toExcel.py
src/tools/redbox/src/: interface.cpp  interface.h  recorder.cpp  recorder.h  redbox.h  util.cpp  util.h
tests/: CMakeLists.txt
tests/luceneindex/: CMakeLists.txt  README.md  analyzerfactory.cpp  analyzerfactory.h  indexmanager.cpp  indexmanager.h  indexstatisticsdialog.cpp  indexstatisticsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  ngramanalyzer.cpp  ngramanalyzer.h  ngramtokenizer.cpp  ngramtokenizer.h
tests/luceneindex/docs/: ngram-analyzer-design.md
tests2/: CMakeLists.txt  test-compile.sh
tests2/common/: CMakeLists.txt  testutils.cpp  testutils.h
tests2/dfm-framework/: CMakeLists.txt  basic_test.cpp
tests2/scripts/: run-tests.sh
(+23 files in other folders)
